# reading_assistant

./: import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/readingassistant2020/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  C_preprocess.cpp  C_preprocess.hpp  bitmap_utils.cpp  bitmap_utils.h  crop.cpp  crop.h  native-lib.cpp  page_dewarp.cpp  page_dewarp.hpp
app/src/main/java/com/example/readingassistant2020/: CaptureImageActivity.java  ImageToText.java  MainActivity.java  ResultActivity.java
app/src/main/java/com/example/readingassistant2020/Retrofit/: IUploadAPI.java  RetrofitClient.java
app/src/main/java/com/example/readingassistant2020/Utils/: ApiUtils.java  ProgressRequestBody.java
app/src/main/res/drawable/: custom_button_continue_capture.xml  custom_button_replay.xml  custom_textview_result_ocr.xml
app/src/main/res/layout/: activity_capture_image.xml  activity_main.xml  activity_result.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/readingassistant2020/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
